fixes spacing on nav tabs

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -182,6 +182,7 @@ div#show-page-header.container {
 
 .nav-item {
     border-radius: 0.5rem;
+    flex: inherit!important;
 }
 
 a.nav-link {
